home pages renamed as index pages and git ignore added

--- a/html/signup.html
+++ b/html/signup.html
@@ -11,7 +11,7 @@
     <div class="navbar">
         <div class="navbar-content">
             <div class="navbar-left">
-                <a href="home.html"> <img height="30px" width="30px" src="../images\favicon.png "></a>
+                <a href="../index.html"> <img height="30px" width="30px" src="../images\favicon.png "></a>
             </div>    
         </div>
     </div>
